diesel-builders/tests/ui/unknown_type_error.stderr
error: Could not infer SQL type. Please specify it using #[diesel(sql_type = ...)]
 --> tests/ui/unknown_type_error.rs:7:5
  |
7 |     pub data: std::collections::HashMap<String, String>,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
